--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,16 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         ParaDNS
-version:      1.8
-version_from: lib/ParaDNS.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                ParaDNS
+version:             1.9
+abstract:            a DNS lookup class for the Danga::Socket framework
+license:             ~
+author:              
+    - Matt Sergeant <matt@sergeant.org>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Danga::Socket:                 0.52
     Net::DNS:                      0.48
     Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
