--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,8 @@ matrix:
   allow_failures:
     - perl: blead
 before_install:
+  - cpanm -n Devel::Cover::Report::Coveralls
   - eval $(curl https://travis-perl.github.io/init) --auto
+script:
+ -  perl Makefile.PL && make test  && cover -test -report coveralls
 
