disable 'prove' in testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
 install:
   - cpan-install --deps       # installs prereqs, including recommends
   - cpan-install --coverage   # installs converage prereqs, if enabled
-script:
-  - prove -l -j$(test-jobs) $(test-files)   # parallel testing
+#script:
+#  - prove -l -j$(test-jobs) $(test-files)   # parallel testing
 after_success:
   - coverage-report
